Changed text button when isDetailed, overflowY hidden when isDetailed, removed the markers in summary, fixed position buttons, partially repaired placeholder, added searchinput in HTML

--- a/css/main.css
+++ b/css/main.css
@@ -1,7 +1,30 @@
 body {
     margin: 50px 0;
 }
-  
+
+p {
+    margin-bottom: 3rem;
+}
+
+.card-title {
+    margin-top: .75rem;
+}
+
+.card-body {
+    position: relative;
+}
+.btn-card {
+    position: absolute;
+    bottom: 15px;
+    right: 20px;
+}
+
+.dropdown {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
 .search-bar {
     margin: 30px 0;
 }
@@ -39,7 +62,7 @@ body {
     height: 100%;
 }
 
-.card-preview-bg {
+.card-preview-bg, .placeholder {
     width: 100%;
     height: 45%;
     background-position: center;
